Issues were fixed. (7)